--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				.wrapper.style2{
 
 					background-color: #83d3c9;
-    				background-image: url(https://unsplash.com/photos/CfDUvn4AP4o);
+    				background-image: url(/images/head.jpg);
     				background-position: center;
     				background-size: cover;
     				color: #fff;
