--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html>
 	<head>
 		<title>Top 10 Vaporizers</title>
+		<meta name="description" content="Top 10 Vapes for Dry Herb, Wax and More">
+  		<meta name="keywords" content="Top 10 Vapes, Best Vaporizers, Vprzrs, Top Vapes">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
