--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<title>Top 10 Vaporizers</title>
-		<meta name="description" content="Top 10 Vapes for Dry Herb, Wax and More">
+		<meta name="description" content="Top 10 Vapes for Dry Herb, Wax and More. It’s all about helping you find the best vaporizer for your specific needs.">
   		<meta name="keywords" content="Top 10 Vapes, Best Vaporizers, Vprzrs, Top Vapes">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
