--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Top 10 Vaporizers</title>
+		<title>Top 10 Vaporizers - Best Vaporizers of 2018</title>
 		<meta name="description" content="Top 10 Vapes for Dry Herb, Wax and More. It’s all about helping you find the best vaporizer for your specific needs.">
   		<meta name="keywords" content="Top 10 Vapes, Best Vaporizers, Vprzrs, Top Vapes">
 		<meta charset="utf-8" />
