--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<h1 id="logo"><a href="index.html">Top 10 Vaporizers<span> by VPRZRS</span></a></h1>
 					<nav id="nav">
 						<ul>
-							<li class="current"><a href="index.html">HOME</a></li>
+							<li class="current"><a href="/">HOME</a></li>
 
 							<li><a href="#Top10Vapes" class="button primary">TOP 10</a></li>
 						</ul>
