--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 		<link rel="canonical" href="http://top10vaporizers.com/" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-93159915-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-93159915-2');
+</script>
+
 	</head>
 	<body class="index is-preload">
 		<div id="page-wrapper">
