--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   		<meta name="keywords" content="Top 10 Vapes, Best Vaporizers, Vprzrs, Top Vapes">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="icon" type="image/png" href="/t10.png" />
 		<link rel="canonical" href="http://top10vaporizers.com/" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
