--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 						Why Top10Vaporizers.com?</h2>
 						
 						<br />
-						It’s all about helping you find the best vaporizer for your specific needs. Making the decision is tough considering the plethora of options. There is no perfect vape which is perfect in all the important aspects such as quality, design, durability, portability etc. But some may be perfect in one or two aspects. Besides, they are pricey and you can’t really try them all before you buy. So we rank the Top 10 in separate categories to make your decision easier.
+						It’s all about helping you find the best vaporizer for your specific needs. Making the decision is tough considering the plethora of options. There is no perfect vape which is perfect in all the important aspects such as quality, design, durability, portability etc. But some may be perfect in one or two aspects. Besides, they are pricey and you can’t really try them all before you buy.
 
 						<br /><br />
 						<p>But hey, we are privileged to test them and tell you our thoughts. It is the only thing we know how to do well. At the end, the final decision is yours to make, we only tell you your experience beforehand.</p>
